--- a/dependency-injection-demo/Views/Shared/_Layout.cshtml
+++ b/dependency-injection-demo/Views/Shared/_Layout.cshtml
@@ -19,13 +19,16 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">[Home]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="InjectServiceInView">Service Inject in View</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="InjectServiceInView">[Service Inject in View]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LifetimeServices" asp-action="Index">[Service Lifespan]</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">[Privacy]</a>
                         </li>
                     </ul>
                 </div>
